--- a/tarea1_EjercicioHtml/PaginaWeb.html
+++ b/tarea1_EjercicioHtml/PaginaWeb.html
@@ -94,7 +94,7 @@
                 <h3>Me gustan los perros</h3>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/c/c2/Australianshepherd01.jpg">
                 <h3>Me gusta jugar paintball</h3>
-                <a href="https://www.youtube.com/watch?v=q8_JDBZ7zAA">Este es un video de paintball del torneo más importante a nivel mundial</a>
+                <a href="">Este es un video de paintball del torneo más importante a nivel mundial</a>
                 
             </article>
         </section>
